--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>?????????</title>
+    <title>melhores lojas de roupas</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,10 +17,10 @@
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">???????</a>
+                    <a href="https://www.nike.com.br/?gclid=EAIaIQobChMI3LXkjJ3igAMVPUFIAB3QpADxEAAYASAAEgLHT_D_BwE&utm_referrer=https://www.google.com/" class="lista-menu__link">nike</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">????????</a>
+                    <a href="https://www.adidas.com.br/?-_-ds_agid=58700005787050612-_-&-_-ds_kid=43700052820248500-_-&cm_mmc=AdieSEM_Google-_-Trademark-adidas-General-B-Exact-_-Trademark-adidas-X-General-_-adidas-_-&cm_mmc2=&cm_mmca1=BR&gclid=EAIaIQobChMIt87pxp3igAMVHkBIAB0_iA8WEAAYASAAEgJBuPD_BwE&gclsrc=aw.ds" class="lista-menu__link">adidas</a>
                 </li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">??????????</a>
