--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                     <a href="https://www.adidas.com.br/?-_-ds_agid=58700005787050612-_-&-_-ds_kid=43700052820248500-_-&cm_mmc=AdieSEM_Google-_-Trademark-adidas-General-B-Exact-_-Trademark-adidas-X-General-_-adidas-_-&cm_mmc2=&cm_mmca1=BR&gclid=EAIaIQobChMIt87pxp3igAMVHkBIAB0_iA8WEAAYASAAEgJBuPD_BwE&gclsrc=aw.ds" class="lista-menu__link">adidas</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">??????????</a>
+                    <a href="https://br.louisvuitton.com/por-br/homepage?gclid=EAIaIQobChMI7eCXq7KFgQMVhi7UAR1bqwPaEAAYASAAEgIOfPD_BwE&gclsrc=aw.ds" class="lista-menu__link">louis vuitton</a>
                 </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+        <h1 class="container__titulo--negrito">LOJAS DE ROUPA</b></h1>
         </div> 
         <!-- ???????? -->
         <div class="container">
