--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <!-- ???????? -->
         </div>
     </header>
-    
+    <div>
+        <img src="img/moveis-para-lojas-de-roupas (1).jpg" alt="">
+    </div>
 </body>
 </html>
