--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         <h1 class="container__titulo--negrito">LOJAS DE ROUPA</b></h1>
-        </div> 
-        <!-- ???????? -->
-        <div class="container">
-            <!-- ???????? -->
+        </div>
+        <div>
+            <a href="#"><img src="/img/Favoritos.svg" alt=""class="container__imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt=""class="container__imagem"></a>
+            <a href="#"><img src="img/Usuario.svg" alt=""class="container__imagem"></a>
         </div>
     </header>
-    <div>
-        <img src="img/moveis-para-lojas-de-roupas (1).jpg" alt="">
-    </div>
+    <img class="loja" src="img/2.jpeg" alt="">
 </body>
 </html>
