--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">LOJAS</span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">inicio</a>
-              <a class="nav-link" href="#">grifes</a>
-              <a class="nav-link" href="#">mais vendidos</a>
+              <a class="nav-link" href="https://br.louisvuitton.com/por-br/homepage?gclid=EAIaIQobChMI7eCXq7KFgQMVhi7UAR1bqwPaEAAYASAAEgIOfPD_BwE&gclsrc=aw.ds">grifes</a>
+              <a class="nav-link" href="https://www.nike.com.br/?gclid=EAIaIQobChMI3LXkjJ3igAMVPUFIAB3QpADxEAAYASAAEgLHT_D_BwE&utm_referrer=https://www.google.com">mais vendida</a>
               <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </div>
           </div>
@@ -43,9 +44,14 @@
                     <a href="https://br.louisvuitton.com/por-br/homepage?gclid=EAIaIQobChMI7eCXq7KFgQMVhi7UAR1bqwPaEAAYASAAEgIOfPD_BwE&gclsrc=aw.ds" class="lista-menu__link">louis vuitton</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="https://www.netshoes.com.br/" class="lista-menu__link">netshoes</a>
+                    <a href="https://www.ous.com.br//" class="lista-menu__link">ous</a>
                 </li>
-                
+                <li class="lista-menu__item">
+                    <a href="https://www.nike.com.br/nav/marca/jordan/" class="lista-menu__link">jordan</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="https://www.lokalskate.com.br//" class="lista-menu__link">lokal skate</a>
+                </li>
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         <h1 class="container__titulo--negrito">LOJAS DE ROUPA</b></h1>
@@ -57,6 +63,7 @@
         </div>
     </header>
     <img class="loja" src="img/2.jpeg" alt="">
+    <img class="loja" src="img/Nike4.webp" alt="">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>   
 </body>
