--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     <a href="https://www.lokalskate.com.br//" class="lista-menu__link">lokal skate</a>
                 </li>
             </ul>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+            <img src="" alt="" class="container__imagem">
         <h1 class="container__titulo--negrito">LOJAS DE ROUPA</b></h1>
         </div>
         <div>
-            <a href="#"><img src="/img/Favoritos.svg" alt=""class="container__imagem"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt=""class="container__imagem"></a>
             <a href="#"><img src="img/Compras.svg" alt=""class="container__imagem"></a>
             <a href="#"><img src="img/Usuario.svg" alt=""class="container__imagem"></a>
         </div>
