--- a/index.html
+++ b/index.html
@@ -26,45 +26,36 @@
           </div>
         </div>
       </nav>
-     <header class="cabeçalho">
-        <div class="container">
-            <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
-                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-            </label>
-            <ul class="lista-menu">
-                <li class="lista-menu__titulo">Categorias</li>
-                <li class="lista-menu__item">
-                    <a href="https://www.nike.com.br/?gclid=EAIaIQobChMI3LXkjJ3igAMVPUFIAB3QpADxEAAYASAAEgLHT_D_BwE&utm_referrer=https://www.google.com/" class="lista-menu__link">nike</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://www.adidas.com.br/?-_-ds_agid=58700005787050612-_-&-_-ds_kid=43700052820248500-_-&cm_mmc=AdieSEM_Google-_-Trademark-adidas-General-B-Exact-_-Trademark-adidas-X-General-_-adidas-_-&cm_mmc2=&cm_mmca1=BR&gclid=EAIaIQobChMIt87pxp3igAMVHkBIAB0_iA8WEAAYASAAEgJBuPD_BwE&gclsrc=aw.ds" class="lista-menu__link">adidas</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://br.louisvuitton.com/por-br/homepage?gclid=EAIaIQobChMI7eCXq7KFgQMVhi7UAR1bqwPaEAAYASAAEgIOfPD_BwE&gclsrc=aw.ds" class="lista-menu__link">louis vuitton</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://www.ous.com.br//" class="lista-menu__link">ous</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://www.nike.com.br/nav/marca/jordan/" class="lista-menu__link">jordan</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://www.lokalskate.com.br//" class="lista-menu__link">lokal skate</a>
-                </li>
-            </ul>
-            <img src="" alt="" class="container__imagem">
-        <h1 class="container__titulo--negrito">LOJAS DE ROUPA</b></h1>
+      <div class="card" style="width: 18rem;">
+        <img src="img/2.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Louis vuitton</h5>
+          <p class="card-text">Grife de luxo conhecida pelas bolsas, malas e outros itens com monograma inconfundível.</p>
+          <a href="https://br.louisvuitton.com/por-br/homepage?gclid=EAIaIQobChMI7eCXq7KFgQMVhi7UAR1bqwPaEAAYASAAEgIOfPD_BwE&gclsrc=aw.ds" class="btn btn-primary">abrir</a>
         </div>
-        <div>
-            <a href="#"><img src="img/Favoritos.svg" alt=""class="container__imagem"></a>
-            <a href="#"><img src="img/Compras.svg" alt=""class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt=""class="container__imagem"></a>
+        <img src="img/Nike4.webp" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Nike</h5>
+          <p class="card-text">empresa americana de calçados, equipamentos desportivos, roupas, e acessórios</p>
+          <a href="https://www.nike.com.br/?gclid=EAIaIQobChMI3LXkjJ3igAMVPUFIAB3QpADxEAAYASAAEgLHT_D_BwE&utm_referrer=https://www.google.com" class="btn btn-primary">abrir</a>
         </div>
+        <img src="img/199-12-6-2019-B98VK2GH3L.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Adidas</h5>
+          <p class="card-text">A Adidas é uma empresa de calçados, roupas esportivas e equipamentos esportivos fundada na Alemanha.</p>
+          <a href="https://www.adidas.com.br/" class="btn btn-primary">abrir</a>
+        </div>
+        <img src="img/gucci-comprar-miami-orlando-bolsa-1-e1628795044522.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Gucci</h5>
+          <p class="card-text">Marca de luxo famosa pelos artigos italianos de couro artesanal, roupas e acessórios para homens e mulheres.</p>
+          <a href="https://www.gucci.com/" class="btn btn-primary">abrir</a>
+        </div>
+      </div>
     </header>
-    <img class="loja" src="img/2.jpeg" alt="">
-    <img class="loja" src="img/Nike4.webp" alt="">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>   
+</div>
 </body>
+
 </html>
